--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
+/*.App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -11,14 +11,14 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+}*/
 .App-header {
-  min-height: 100vh;
-  display: flex;
+/*  min-height: 100vh;*/
+/*  display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: center;*/
+/*  font-size: calc(10px + 2vmin);*/
   color: white;
 }
 
