--- a/src/components/components.css
+++ b/src/components/components.css
@@ -1,19 +1,22 @@
 #nav {
-  width: 100%;
-  float: left;
-  margin: 0 0 3em 0;
+/*  float: left;
+  margin: 0 0 3em 0;*/
   padding: 0;
   list-style: none;
+    border-bottom:1px solid #f1f1;
+  display: flex;
+  justify-content:space-around;
+  flex-direction: row;
   background: #fff;
-  border-bottom:1px solid #f1f1;
+  margin:0px;
   }
 #nav li {
-  float: left;
+  display: inline-block;
 
   }
 
 #nav li a {
-    display: block;
+    display: inline-block;
     margin: 10px 10px;
     padding: 20px;
     text-decoration: none;
@@ -37,5 +40,12 @@
     padding:10px;
     border:none;
     border-bottom: 1px solid #000;
+  }
+  .panel{
+    margin: 50px;
+  }
+  .footer{
+    text-align: center;
+    background: #ddd!important;
   }
 
