--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
-.App {
+/*.App {
   text-align: center;
 }
 
-/*.App-logo {
+.App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -11,22 +11,22 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}*/
+}
 .App-header {
-/*  min-height: 100vh;*/
-/*  display: flex;
+  min-height: 100vh;
+  display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;*/
-/*  font-size: calc(10px + 2vmin);*/
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
   color: white;
 }
 
 .App-link {
   color: #61dafb;
-}
+}*/
 
-@keyframes App-logo-spin {
+/*@keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -34,3 +34,4 @@
     transform: rotate(360deg);
   }
 }
+*/
