--- a/src/components/components.css
+++ b/src/components/components.css
@@ -38,20 +38,24 @@
   #textField:focus{
   outline: none;
   text-align: center;
+  transform: scale(1.5);
+  transition: 1s ease-in-out;
   }
   .container{
     display: flex;
     justify-content: space-between;
   }
   .panel{
-  margin: 50px;
+  margin: 20px;
   }
   .footer{
   text-align: center;
-  background: #ddd!important;
+  background: #46376a!important;
+  color:#fff;
+  padding:10px;
   }
 
-  @media screen and (max-width: 700px){
+  @media screen and (max-width: 750px){
     #textField{
       display: none;
     }
@@ -66,6 +70,9 @@
     .container{
     display: flex;
     flex-direction: column;
+  }
+  #logo{
+
   }
 
   }
