--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-/*.App {
+.App {
   text-align: center;
 }
 
@@ -34,7 +34,7 @@
     transform: rotate(360deg);
   }
 }
-*/
+
 html{
   margin:0px;
 }
